# translator

./: Cargo.toml  README.md
res/: settings.toml
src/: cfg.rs  ui.rs  unix.rs  windows.deepl.rs  windows.doubao.rs  windows.rs
