[package]
name = "translator"
version = "0.4.2"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
ahash = "0.8.11"
cli-clipboard = "0.4"
cfg-if = "1"
config = "0.13"
deepl = "0.6"
eframe = "0.20"
egui = "0.20"
lazy_static = "1.4"
log = "0.4"
ico = "0.3"
rdev = "0.5"
tauri-hotkey = { git = "https://gitee.com/tanyanliang/tauri-hotkey-rs"}
tokio = { version = "1.41.1", features = ["rt", "macros", "fs", "rt-multi-thread", "io-util"] }
deepseek-api-client = {  git = "https://github.com/acscoder/deepseek-api-client" } 

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "translator.exe"
LegalCopyright = "Copyright © 2021-2022 zu1k"
ProductName = "Translator"
ProductVersion = "0.4.2"
FileDescription = "Translator: 简单、轻量、好用的划词翻译软件"
